# TrainerDex.py

./: .flake8  .gitignore  .pre-commit-config.yaml  .wakatime-project  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  TrainerDex.py  __init__.py  api.py  cached.py  client.py  http.py  network.py  pyproject.toml  requests.py  requirements.txt  setup.cfg  setup.py  test_levels.py  trainer.py  trainer_api.py  update.py  useful.py  user.py  utils.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: publish.yml  python-package.yml  tests.yml
trainerdex/: __init__.py  abc.py  cached.py  client.py  exceptions.py  faction.py  http.py  leaderboard.py  models.py  network.py  requirements.txt  socialconnection.py  trainer.py  update.py  user.py  utils.py  version.py
trainerdex/api/: __init__.py  base.py  client.py  config.py  exceptions.py  faction.py  http.py  leaderboard.py  socialconnection.py  trainer.py  update.py  user.py  utils.py
trainerdex/api/client/: __init__.py  base.py  client_credentials.py  token.py
trainerdex/api/http/: __init__.py  base.py  config_calls.py  v1_calls.py
trainerdex/api/http/auth/: decorators.py  token.py
trainerdex/api/http/auth/oauth/: client_credentials.py
trainerdex/api/types/: config.py
trainerdex/api/types/v1/: social_connection.py  trainer.py  update.py  user.py
trainerdex/clients/: legacy.py
trainerdex/data/: factions.json  levels.json
trainerdex/exceptions/: auth.py
trainerdex/http/: __init__.py  bearer.py  interface.py
trainerdex/http/oauth/: __init__.py  client_credentials.py  interface.py
