[metadata]
name = trainerdex
version = attr: trainerdex.__version__
url = https://trainerdex.app/
author = TurnrDev
author_email = jay@trainerdex.app
description = An API to interact with TrainerDex - a online database of Pokemon Go trainers
long_description = file: README.md
license = GPL-3.0
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Release notes = https://github.com/TrainerDex/TrainerDex.py/blob/master/CHANGELOG.md
    Funding = https://www.patreon.com/TrainerDexApp
    Source = https://github.com/TrainerDex/TrainerDex.py

[options]
python_requires = >=3.7
packages = find:
zip_safe = true
install_requires = 
    aiohttp>=3.6.0,<4.0.0
    python-dateutil>=2.8.1
